# geobert

./: .dockerignore  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
notebooks/: 01_eda.ipynb  02_map_visualizations.ipynb  03_model_design_decisions.ipynb  04_evaluation.ipynb
outputs/maps/: evaluation_worst_predictions.html  nyc_bronx_heatmap.html  nyc_brooklyn_heatmap.html  nyc_clustered.html  nyc_heatmap.html  nyc_manhattan_heatmap.html  nyc_queens_heatmap.html  nyc_sample_points.html  nyc_staten_island_heatmap.html  nyc_zipcode_density.html
spaces/: README.md  app.py  config.py  inferencer.py  model.py  normalization.py  requirements.txt
src/data/: fetch_nyc_data.py
src/geobert/: __init__.py  cli.py  config.py  dataset.py  device.py  inferencer.py  metrics.py  model.py  normalization.py  trainer.py
tests/: __init__.py
